<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SerJeep</string>
    <string name="title_activity_jeep">JeepMap</string>
    <string name="get_jeep_route_text">Get jeep route</string>
    <string name="serjeep_title_text">SerJeep</string>
    <string name="view_jeep_routes_text">Search Jeep Routes</string>
    <string name="send_route_text">Send Route</string>
    <string name="close_text">Close</string>
    <string name="view_routes_title_text">Makati City Available Routes</string>
    <string name="flag_as_inaccurate_button">Flag as Inaccurate</string>
    <string name="rate_our_app_button">Rate our App!</string>

    <string-array name="makati_transit">
        <item>Ayala-Mantrade</item>
        <item>Ayala-Pateros</item>
        <item>Ayala-Washington</item>
        <item>Ayala-Zapote</item>
        <item>Ayala-Loop</item>
        <item>BelAir-Washington</item>
    </string-array>
    
</resources>
