<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center|top"
    android:orientation="vertical"
    android:background="@drawable/back"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/serjeep_title_text"
        android:id="@+id/serjeep_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue_grey_800"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_jeep_routes_text"
        android:onClick="onClick_viewJeepRoutes"
        android:id="@+id/viewJeepRoutesButton"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/get_jeep_route_text"
        android:id="@+id/getJeepRoute"
        android:onClick="onClick_getJeepRoute"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_route_text"
        android:onClick="onClick_sendRoute"
        android:id="@+id/sendRouteButton"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/close_text"
        android:id="@+id/closeButton"
        android:onClick="onClick_close"
        />

</LinearLayout>
